...
            <point key="canvasLocation" x="-1270" y="125"/>
        </scene>
        <!--Showings-->
        <scene sceneID="scene-nav-movies">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nav-movies" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Showings" image="ticket" catalog="system" id="tab-movies"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bar-movies">
                        <rect key="frame" x="0.0" y="24" width="1032" height="50"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="showings-vc" kind="relationship" relationship="rootViewController" id="root-showings"/>
...
                                    <outlet property="delegate" destination="movies-vc" id="search-delegate"/>
                                </connections>
                            </searchBar>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="movies-segments">
                                <rect key="frame" x="16" y="156" width="1000" height="33"/>
                                <segments>
                                    <segment title="All"/>
                                    <segment title="Now Showing"/>
                                    <segment title="Coming Soon"/>
                                </segments>
                                <connections>
                                    <action selector="categoryChanged:" destination="movies-vc" eventType="valueChanged" id="category-action"/>
                                </connections>
...
            <point key="canvasLocation" x="420" y="-600"/>
        </scene>
        <!--Bookings-->
        <scene sceneID="scene-nav-bookings">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nav-bookings" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Bookings" image="list.bullet.rectangle" catalog="system" id="tab-bookings"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bar-bookings">
                        <rect key="frame" x="0.0" y="24" width="1032" height="50"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="bookings-vc" kind="relationship" relationship="rootViewController" id="root-bookings"/>
...
            <point key="canvasLocation" x="420" y="125"/>
        </scene>
        <!--Locations-->
        <scene sceneID="scene-nav-locations">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nav-locations" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Locations" image="mappin.and.ellipse" catalog="system" id="tab-locations"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bar-locations">
                        <rect key="frame" x="0.0" y="24" width="1032" height="50"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="locations-vc" kind="relationship" relationship="rootViewController" id="root-locations"/>
...
