...
        summaryLabel.font = CineSeatFont.body
        summaryLabel.textColor = CineSeatTheme.secondaryText
        summaryLabel.numberOfLines = 0
        details.addArrangedSubview(summaryLabel)
        contentStack.addArrangedSubview(makeCard(with: details))

        reviewsButton.accessibilityIdentifier = "ticketedShowingReviewsButton"
        reviewsButton.addTarget(self, action: #selector(reviewsTapped), for: .touchUpInside)
        contentStack.addArrangedSubview(reviewsButton)

        contentStack.addArrangedSubview(CineSeatTheme.captionLabel("Select date"))
        configureDatePicker()
        contentStack.addArrangedSubview(makeCard(with: UIStackView(arrangedSubviews: [datePicker]), padding: 10))
...

        quantityStepper.minimumValue = 1
        quantityStepper.maximumValue = Double(AppConstants.Booking.maximumEventTickets)
        quantityStepper.stepValue = 1
        quantityStepper.value = Double(viewModel.quantity)
        quantityStepper.addTarget(self, action: #selector(quantityChanged(_:)), for: .valueChanged)
        quantityStepper.accessibilityIdentifier = "eventTicketQuantityStepper"

        quantityLabel.font = CineSeatFont.infoValue
        quantityLabel.textColor = CineSeatTheme.primaryText
        priceLabel.font = CineSeatFont.detailTitle
        priceLabel.textColor = CineSeatTheme.primaryText
        priceLabel.textAlignment = .right
...
        let ticketStack = UIStackView(arrangedSubviews: [quantityRow, priceRow])
        ticketStack.axis = .vertical
        ticketStack.spacing = CineSeatSpacing.medium
        contentStack.addArrangedSubview(makeCard(with: ticketStack))

        bookButton.addTarget(self, action: #selector(bookTicketsTapped), for: .touchUpInside)
        bookButton.accessibilityIdentifier = "bookEventTicketsButton"
        contentStack.addArrangedSubview(bookButton)
    }

    private func configureDatePicker() {
        datePicker.datePickerMode = .date
        datePicker.preferredDatePickerStyle = .inline
...
